--- a/static/stat120/Day11.Rmd
+++ b/static/stat120/Day11.Rmd
@@ -63,12 +63,8 @@ library(Lock5Data)
 
 # Set ggplot theme
 theme_set(theme_tufte(base_size = 10))
-
-
 yt <- 0
-
 # read.csv("https://raw.githubusercontent.com/deepbas/statdatasets/main/APM_DougEvansCases.csv")
-
 ```
 
 
@@ -106,14 +102,40 @@ background-size: 160px, 100% 100%
 
 ---
 
+
+## Introduction to Hypothesis Tests
+
+.bqt.font80[.bold[Objective: Using data from a sample to make decisions about the broader population.]]
+  
+.bql.font80[ 
+**Two Competing Hypotheses**: 
+  1. **Null Hypothesis $(H_0)$**: Assumes no effect or no difference. 
+  2. **Alternative Hypothesis $(H_a)$**: Suggests a specific effect or difference exists.
+]
+  
+
+.hljs.font70[  
+- **Specifying Hypotheses**: We frame these hypotheses in terms of population parameters (like mean, proportion, etc.).
+
+- **Example**: 
+  - $H_0$: The mean height of adults = 5.5 feet.
+  - $H_a$: The mean height of adults ≠ 5.5 feet.
+
+.bold[Our goal is to determine which hypothesis is more likely given our sample data.]
+]
+
+---
+
 class: middle
 
-# Extrasensory Perception
+## Motivating Example: Extrasensory Perception
 
 <center>
 <img src="images/psychic.jpg" width="80%" height="70%"><br>
 <a></a>
 </center>
+
+.footnote[Source: [click here](http://www.gallup.com/poll/4483/Americans-Belief-Psychic-Paranormal-Phenomena-Over-Last-Decade.aspx)]
 
 ---
 
@@ -145,9 +167,40 @@ One way to test for ESP is with Zener cards:
 
 ---
 
+class: middle
+
+# Explaining Random Chance
+
+
+.pull-left.font80[
+.bql.font80[
+## Random Chance with a Coin Toss
+
+- A fair coin has an **equal** chance of landing **heads** or **tails**.
+- Sometimes sequences like "HHHTHH" might emerge.
+- Does it mean heads are more likely?
+
+## Toss More Times!
+
+- As we toss many more times, what happens to the ratio of heads to tails?
+]
+]
+.pull-right[
+
+<br>
+
+![](https://media.giphy.com/media/26gs8DLhlh9Drr7BS/giphy.gif)
+
+]
+
+
+.footnote[[Demo: Flipping a coin](https://seeing-theory.brown.edu/basic-probability/index.html)]
+
+---
+
 class: action
 
-# <i class="fa fa-pencil-square-o" style="font-size:48px;color:purple">&nbsp;Your&nbsp;Turn&nbsp;`r (yt <- yt + 1)`</i>    
+# <i class="fa fa-pencil-square-o" style="font-size:48px;color:purple">&nbsp;Group&nbsp;Work&nbsp;`r (yt <- yt + 1)`</i>      
 
 .pull-left-40[
 ![](https://media.giphy.com/media/RKApDdwsQ6jkwd6RNn/giphy.gif)
@@ -220,6 +273,20 @@ The correct answer is 4. Since more correct means ESP.
 
 ---
 
+class: middle
+
+# Hypothesis Testing: A Recap
+
+.bql[
+- **Goal**: Use sample data to assess population claims.
+- **Null Hypothesis $(H_0)$**: No effect or difference.
+- **Alternative Hypothesis $(H_a)$**: Evidence-seeking claim.
+- Tests reveal if observed stats suggest genuine difference or result from random chance.
+- .bold[Aim]: Refute $H_0$ with enough evidence.
+]
+
+---
+
 # Extrasensory Perception
 
 .bql.font120[
@@ -232,32 +299,7 @@ The correct answer is 4. Since more correct means ESP.
 <br>
 <br>
 
-.out-t.font120[How do we determine when a sample proportion is far enough above 1/5 to provide evidence of ESP?]
-
----
-
-<br>
-
-# Statistical Test
-
-.bql.font110[
-A statistical test uses data from a sample to assess a claim about a population or experiment
-
-
-.yellow-h.bold[Null Hypothesis:] $\left(\mathrm{H}_{0}\right)$
-Claim that there is no effect or difference.
-
-.yellow-h.bold[Alternative Hypothesis:] $\left(\mathrm{H}_{\mathrm{a}}\right)$
-Claim for which we seek evidence.
-
-]
-
---
-
-<br>
-<br>
-
-.out-t.center[Always claims about .bold[population parameters.]]
+.hljs.font120[How do we determine when a sample proportion is far enough above 1/5 to provide evidence of ESP?]
 
 ---
 
@@ -281,11 +323,20 @@ class: middle
 - $\mathrm{H}_{0}$ usually includes $=$
 - $\mathrm{H}_{\mathrm{a}}$ usually includes $>,<$, or $\neq$
 - The direction in $\mathrm{H}_{\mathrm{a}}$ depends on the question being asked, not based on what the data shows!
-- The data should be used as an evidence supporting or refuting $\mathrm{H}_{\mathrm{a}}$.
 ]
 
 ---
 
+
+class: inverse, middle, center
+
+
+# Moving Forward...
+
+
+.bql.font120[How to test if observed difference between groups is real or just due to random chance?]
+
+---
 
 # Sleep Vs. Caffeine 
 
@@ -298,7 +349,7 @@ Students were given words to memorize, then randomly assigned to take either a 9
 
 <br>
 
-.green-h.font120[.b[Research Question]: Is sleep or caffeine better for memory?
+.hljs.font120[.b[Research Question]: Is sleep or caffeine better for memory?
 ]
 
 .footnote[Mednick, Cai, Kanady, and Drummond (2008). “Comparing the benefits of caffeine, naps and placebo on verbal, motor and perceptual memory,” Behavioral Brain Research, 193, 79-86.]
@@ -308,7 +359,7 @@ Students were given words to memorize, then randomly assigned to take either a 9
 
 # Sleep Vs. Caffeine
 
-.bqt.font90[
+.bql.font90[
 
 What is the parameter of interest in the sleep versus caffeine experiment?
 
@@ -374,34 +425,21 @@ The correct answer is 2 (since we are looking for evidence that the means are di
 
 ---
 
-class: middle
+## Random chance using [Statkey](https://www.lock5stat.com/StatKey/index.html)
 
-# Statistical Significance
+.bq.font60[How can we be sure if an observed difference between two groups is real, or if it's just something that could happen by random chance?]
 
 <center>
-<img src="images/boyfriend.png" width="90%" height="90%"><br>
-<a href= "https://www.xkcd.com"> xkcd.com </a>
+<img src="images/sleep_caffiene.png" width="60%" height="50%"><br>
+<a></a>
 </center>
 
 
 ---
 
-class: middle
-
-# Statistical Significance
-
-.bql[
-When results as extreme as the observed sample statistic are unlikely to occur by .bold[random chance] alone (assuming the null hypothesis is true), we say the sample results are .bold[statistically significant]
-- If our sample is .bold[statistically significant], we have convincing .bold[evidence against] $\mathrm{H}_{0}$, .bold[in favor of] $\mathrm{H}_{\mathrm{a}}$
-- If our sample is .bold[not statistically significant], our test is .bold[inconclusive]. The null hypothesis may be true (or maybe not).
-]
-
----
-
-
 class: action
 
-# <i class="fa fa-pencil-square-o" style="font-size:48px;color:purple">&nbsp;Your&nbsp;Turn&nbsp;`r (yt <- yt + 1)`</i>    
+# <i class="fa fa-pencil-square-o" style="font-size:48px;color:purple">&nbsp;Group&nbsp;Work&nbsp;`r (yt <- yt + 1)`</i>     
 
 .pull-left-40[
 ![](https://media.giphy.com/media/RKApDdwsQ6jkwd6RNn/giphy.gif)
@@ -412,10 +450,10 @@ class: action
 <br>
 .bql[
 
-- Please work on the in-class activity and we will discuss this together!
-- We will also do a brief midterm review if time permits!
+- Let's go over some more examples at the [course helper page](https://stat120-fall23.netlify.app/)
+- We will then do a class activity together
 ]
 ]
 
-`r countdown(minutes = 15, seconds = 00, top = 0 , color_background = "inherit", padding = "3px 4px", font_size = "2em")`
+`r countdown(minutes = 20, seconds = 00, top = 0 , color_background = "inherit", padding = "3px 4px", font_size = "2em")`
 
