--- a/static/stat120/Day25.Rmd
+++ b/static/stat120/Day25.Rmd
@@ -473,15 +473,16 @@ class: action
 .pull-left-40[
 ![](https://media.giphy.com/media/RKApDdwsQ6jkwd6RNn/giphy.gif)
 ]
+
 .pull-right-60[
 
 <br>
-<br>
-
 .bql[
-- Go over to the in-class activity file
-- Complete the remaining activity 
+- Let's go over to the [course helper page](https://stat120-fall23.netlify.app/)
+- Please do the class activity and let me know if you have any questions
+- Feel free to talk to your neighbor
 ]
 ]
 
-`r countdown(minutes = 10, seconds = 00, top = 0 , color_background = "inherit", padding = "3px 4px", font_size = "2em")`
+
+`r countdown(minutes = 15, seconds = 00, top = 0 , color_background = "inherit", padding = "3px 4px", font_size = "2em")`
